--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev:client": "vite",
-    "dev:server": "nodemon src/server/chat.ts",
+    "dev:server": "nodemon --exec ts-node src/server/chat.ts",
     "dev": "concurrently \"npm:dev:server\" \"npm:dev:client\"",
     "build": "vite build"
   },
@@ -23,6 +23,7 @@
     "@vitejs/plugin-react": "^4.0.0",
     "concurrently": "^8.0.0",
     "nodemon": "^2.0.22",
+    "ts-node": "^10.9.1",
     "tailwindcss": "^3.3.0",
     "postcss": "^8.4.21",
     "autoprefixer": "^10.4.14",
